--- a/merge-pdf.html
+++ b/merge-pdf.html
@@ -52,32 +52,55 @@
     "name": "Merge PDF Free, Secure, Offline (No Uploads)",
     "headline": "Merge PDF Free, Secure, Offline (No Uploads)",
     "description": "Merge multiple PDF files securely and privately in your browser. 100% free, no uploads, no watermarks, works offline.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/merge-pdf"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "Merge PDF Tool",
+    "@type": "Software",
+    "name": "PDF Merge Tool",
     "url": "https://www.alltoolai.com/merge-pdf",
-    "image": "https://www.alltoolai.com/assets/icons/merge-pdf-icon.png",
-    "description": "A free, secure, and offline-ready tool to combine multiple PDF files into one. No uploads, no watermarks, unlimited use.",
-    "brand": {
-      "@type": "Organization",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
-    },
+    "description": "Merge multiple PDFs into one file. 100% client-side, offline, free, unlimited use.",
+    "applicationCategory": "Online Tool",
+    "operatingSystem": "Browser",
+    "softwareVersion": "1.0",
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock"
-    }
+    },
+    "featureList": [
+      "Merge multiple PDF files into one document",
+      "Client-side processing for privacy and security",
+      "Free and unlimited use",
+      "Offline functionality after initial load",
+      "Fast PDF merge processing",
+      "Drag-and-drop file uploading",
+      "Reorder PDF files before merging",
+      "Supports large files",
+      "Instant download after merge",
+      "User-friendly interface"
+    ],
+      "publisher": {
+        "@type": "Organization",
+        "name": "AllToolAI",
+        "url": "https://www.alltoolai.com"
+      },
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://www.alltoolai.com/merge-pdf"
+      }
   }
   </script>
   <script type="application/ld+json">
