--- a/pdf-decrypt.html
+++ b/pdf-decrypt.html
@@ -51,13 +51,22 @@
     "url": "https://www.alltoolai.com/pdf-decrypt",
     "name": "PDF Decrypt & Encrypt 100% Offline",
     "description": "Top speed, best-in-class security, and lifetime free, unlimited use. Password protect or unlock PDFs securely in your browser; no uploads, no watermarks, truly private.",
-    "isAccessibleForFree": true
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-decrypt"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebApplication",
+    "@type": "Software",
     "name": "PDF Encrypt & Decrypt (AllToolAI)",
     "url": "https://www.alltoolai.com/pdf-decrypt",
     "description": "Client-side PDF encrypt and decrypt tool that runs entirely in the browser. Encrypt PDFs to a .epdf container and decrypt .epdf back to .pdf. Works offline in modern browsers.",
@@ -69,6 +78,22 @@
       "price": "0",
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock"
+    },
+    "featureList": [  
+      "Encrypt PDF with password",  
+      "Decrypt PDF files securely",  
+      "Offline, private, and free",  
+      "Supports all major browsers",  
+      "No uploads or tracking"  
+    ],  
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-decrypt"
     }
   }
   </script>
