--- a/pdf-encrypt.html
+++ b/pdf-encrypt.html
@@ -52,6 +52,16 @@
     "name": "Encrypt & Decrypt PDF (Offline) Free, Secure, No Uploads",  
     "url": "https://www.alltoolai.com/pdf-encrypt",  
     "description": "Password protect or unlock PDFs securely in your browser. 100% client-side, no uploads, free and unlimited forever.",  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-encrypt"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    },
     "breadcrumb": {  
       "@type": "BreadcrumbList",  
       "itemListElement": [{  
@@ -78,7 +88,7 @@
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "PDF Encrypt & Decrypt",  
     "operatingSystem": "Windows, macOS, Linux, Android, iOS",  
     "applicationCategory": "UtilityApplication",  
@@ -96,11 +106,15 @@
       "Supports all major browsers",  
       "No uploads or tracking"  
     ],  
-    "creator": {  
-      "@type": "Organization",  
-      "name": "AllToolAI",  
-      "url": "https://www.alltoolai.com"  
-    }  
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-encrypt"
+    }
   }  
   </script>
   <script type="application/ld+json">  
