--- a/pdf-extractor.html
+++ b/pdf-extractor.html
@@ -49,18 +49,22 @@
     "url": "https://www.alltoolai.com/pdf-extractor",
     "name": "Advanced PDF Extractor | Free & Private",
     "description": "Extract PDF pages securely in your browser. 100% client-side, free, unlimited use with no uploads or sign ups.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-extractor"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com",
-      "name": "AllToolAI"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Advanced PDF Extractor",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -78,10 +82,14 @@
       "price": "0.00",
       "priceCurrency": "USD"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-extractor"
     }
   }
   </script>
