--- a/pdf-pages-delete.html
+++ b/pdf-pages-delete.html
@@ -61,16 +61,22 @@
     "name": "PDF Pages Delete",
     "url": "https://www.alltoolai.com/pdf-pages-delete",
     "description": "Free, private, offline PDF page deletion tool that lets you securely delete or extract pages from a PDF file in your browser. 100% client-side, no uploads.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-pages-delete"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "PDF Pages Delete",
     "operatingSystem": "Any (Web Browser)",
     "applicationCategory": "UtilitiesApplication",
@@ -90,10 +96,14 @@
       "priceCurrency": "USD",
       "category": "Free"
     },
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-pages-delete"
     }
   }
   </script>
