--- a/pdf-split.html
+++ b/pdf-split.html
@@ -52,13 +52,22 @@
     "url": "https://www.alltoolai.com/pdf-split",
     "name": "Split PDF Online — Free, Secure, No Uploads | Advanced PDF Splitter",
     "description": "Split PDFs by range or every N pages — 100% client-side, no uploads, no watermarks, free and private. Works on all devices.",
-    "inLanguage": "en"
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-split"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Advanced PDF Splitter",
     "applicationCategory": "UtilityApplication",
     "operatingSystem": "Windows, Mac, Linux, Android, iOS",
@@ -69,6 +78,15 @@
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-split"
     }
   }
   </script>
