--- a/pdf-to-png.html
+++ b/pdf-to-png.html
@@ -51,19 +51,24 @@
     "name": "PDF to PNG Converter Free, Offline & Secure",
     "url": "https://www.alltoolai.com/pdf-to-png",
     "description": "Convert PDF pages to high-quality PNG images securely in your browser. Free, offline, private PDF to PNG converter with no uploads, no watermarks, and unlimited use.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-to-png"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "PDF to PNG Converter",
-    "operatingSystem": "Any",
+    "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
     "url": "https://www.alltoolai.com/pdf-to-png",
     "description": "A free, offline, and secure tool to convert PDF pages into high-quality PNG images directly in your browser.",
@@ -83,7 +88,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-to-png"
     }
   }
   </script>
