--- a/rearrange-pdf-pages.html
+++ b/rearrange-pdf-pages.html
@@ -50,13 +50,23 @@
     "@type": "WebPage",  
     "url": "https://www.alltoolai.com/rearrange-pdf-pages",  
     "name": "Rearrange PDF Pages | AllToolAI",  
-    "description": "Reorder, rotate, and delete PDF pages for free — 100% offline and private. All processing is done locally in your browser with no uploads or watermarks."
+    "description": "Reorder, rotate, and delete PDF pages for free — 100% offline and private. All processing is done locally in your browser with no uploads or watermarks.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/rearrange-pdf-pages"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    }
   }  
   </script>  
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "Rearrange PDF Pages",  
     "operatingSystem": "Windows, macOS, Linux, Android, iOS",  
     "applicationCategory": "UtilityApplication",  
@@ -76,7 +86,16 @@
       "Offline and secure",  
       "No watermarks",  
       "Unlimited free use"  
-    ]  
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/rearrange-pdf-pages"
+    }
   }  
   </script>  
   <script type="application/ld+json">
