--- a/resize-pdf.html
+++ b/resize-pdf.html
@@ -49,23 +49,27 @@
     "name": "Resize PDF Pages Online Fast, Private, Free (Client Side)",
     "url": "https://www.alltoolai.com/resize-pdf",
     "description": "Free, secure, and offline PDF resizer tool that works entirely in your browser. Resize PDFs to A4, A5, Letter, Legal, or custom sizes with no uploads or watermarks.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/resize-pdf"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Product",
+    "@type": "Software",
     "name": "Resize PDF Tool",
     "description": "A fast, private, and fully functional client-side tool to resize PDFs securely in your browser with no uploads.",
-    "brand": {
-      "@type": "Brand",
-      "name": "AllToolAI"
-    },
+    "applicationCategory": "UtilitiesApplication",
+    "operatingSystem": "Any",
+    "browserRequirements": "Requires JavaScript. Works on Chrome, Firefox, Safari, Edge.",
     "url": "https://www.alltoolai.com/resize-pdf",
     "offers": {
       "@type": "Offer",
@@ -73,6 +77,16 @@
       "priceCurrency": "USD",
       "availability": "https://schema.org/InStock",
       "url": "https://www.alltoolai.com/resize-pdf"
+    },
+    "featureList": "Online PDF Resizer, Compress PDF without quality loss, Reduce PDF file size for email, Secure file processing, No installation required, Free PDF tool",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/resize-pdf"
     }
   }
   </script>
