--- a/rotate-pdf-pages.html
+++ b/rotate-pdf-pages.html
@@ -50,6 +50,16 @@
     "name": "Rotate PDF Pages (Free, Offline) | AllToolAI",
     "url": "https://www.alltoolai.com/rotate-pdf-pages",
     "description": "Rotate or delete PDF pages securely in your browser. 100% client-side, free forever, and private. No uploads, no watermarks.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/rotate-pdf-pages"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    },
     "breadcrumb": {
       "@type": "BreadcrumbList",
       "itemListElement": [
@@ -78,7 +88,7 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Rotate PDF Pages",
     "operatingSystem": "Web Browser",
     "applicationCategory": "UtilityApplication",
@@ -100,6 +110,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/rotate-pdf-pages"
     }
   }
   </script>
