--- a/text-to-pdf.html
+++ b/text-to-pdf.html
@@ -41,17 +41,6 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "Free Text to PDF Converter (No Upload)",
-    "url": "https://www.alltoolai.com/text-to-pdf",
-    "description": "Convert plain text, notes, or code into a professional PDF instantly. 100% private, fast, and free text to PDF converter with customizable page size, orientation, and font options.",
-    "headline": "Free Text to PDF Converter | Online, Fast & Private",
-    "inLanguage": "en"
-  }
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
     "@type": "WebSite",
     "url": "https://www.alltoolai.com/",
     "name": "AllToolAI",
@@ -65,7 +54,27 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "WebPage",
+    "name": "Free Text to PDF Converter (No Upload)",
+    "url": "https://www.alltoolai.com/text-to-pdf",
+    "description": "Convert plain text, notes, or code into a professional PDF instantly. 100% private, fast, and free text to PDF converter with customizable page size, orientation, and font options.",
+    "headline": "Free Text to PDF Converter | Online, Fast & Private",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-to-pdf"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/pdf-tools"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Software",
     "name": "Text to PDF Converter",
     "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
@@ -83,6 +92,15 @@
       "price": "0",
       "priceCurrency": "USD",
       "category": "Free"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/text-to-pdf"
     }
   }
   </script>
