--- a/watermark-pdf.html
+++ b/watermark-pdf.html
@@ -50,16 +50,22 @@
     "name": "Add Watermark to PDF (Text or Image) Free, Private, No Uploads",
     "url": "https://www.alltoolai.com/watermark-pdf",
     "description": "Add text or image watermarks to your PDFs securely in your browser. 100% client side, free, and unlimited.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/watermark-pdf"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Watermark PDF Tool",
     "operatingSystem": "Any",
     "applicationCategory": "UtilityApplication",
@@ -76,7 +82,16 @@
       "Adjust opacity, rotation, and position",
       "Live preview",
       "Free and unlimited usage"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/watermark-pdf"
+    }
   }
   </script>
   <script type="application/ld+json">
