--- a/add-pdf-page-numbers.html
+++ b/add-pdf-page-numbers.html
@@ -49,18 +49,22 @@
     "url": "https://www.alltoolai.com/add-pdf-page-numbers",
     "name": "Add Page Numbers to PDF Online (Free, Private)",
     "description": "Add page numbers to your PDF instantly — 100% secure, free, and processed locally. Customize format, font, color, alignment, and range.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/add-pdf-page-numbers"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/",
-      "name": "AllToolAI"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Add PDF Page Numbers",
     "operatingSystem": "Any (web-based)",
     "applicationCategory": "UtilityApplication",
@@ -82,7 +86,11 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/add-pdf-page-numbers"
     }
   }
   </script>
