--- a/images-to-pdf.html
+++ b/images-to-pdf.html
@@ -56,16 +56,22 @@
     "name": "Image to PDF Converter",
     "url": "https://www.alltoolai.com/images-to-pdf",
     "description": "Convert images to PDF securely in your browser. 100% offline, free, and private. Combine JPG, PNG, WebP, and BMP into a professional PDF instantly.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/images-to-pdf"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Image to PDF Converter",
     "operatingSystem": "Any (Web-based)",
     "applicationCategory": "UtilityApplication",
@@ -86,10 +92,14 @@
       "No watermarks or sign-ups",
       "Instant download"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
-      "name": "AlltoolAI",
-      "url": "https://www.alltoolai.com/"
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/images-to-pdf"
     }
   }
   </script>
