--- a/pdf-to-jpg.html
+++ b/pdf-to-jpg.html
@@ -53,20 +53,24 @@
     "name": "PDF to JPG Converter (Offline, Free, Secure)",
     "url": "https://www.alltoolai.com/pdf-to-jpg",
     "description": "Convert PDF pages to high-quality JPG images securely in your browser. 100% offline, free, and private.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-to-jpg"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/",
-      "name": "AllToolAI"
+      "url": "https://www.alltoolai.com/pdf-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "PDF to JPG Converter",
-    "operatingSystem": "Any (Web-based)",
+    "operatingSystem": "Web",
     "applicationCategory": "UtilityApplication",
     "applicationSubCategory": "File Conversion",
     "browserRequirements": "Requires a modern web browser",
@@ -86,10 +90,14 @@
       "ZIP download support",
       "Cross-platform compatibility"
     ],
-    "creator": {
+    "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-to-jpg"
     }
   }
   </script>
