--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -58,9 +58,16 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "url": "https://www.alltoolai.com/pdf-tools",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
     "name": "Free Online PDF Tools | Merge, Split, Convert, Secure",
     "description": "Use All Tool AI’s free PDF tools to merge, split, convert, rotate, extract, encrypt, and manage your PDFs securely online. 100% free and confidential.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/pdf-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/"
@@ -88,10 +95,6 @@
     "@type": "Organization",
     "name": "All Tool AI",
     "url": "https://www.alltoolai.com/",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://www.alltoolai.com/assets/icon/favicon.svg"
-    },
     "sameAs": [
       "https://www.facebook.com/alltoolai",
       "https://twitter.com/alltoolai",
@@ -144,21 +147,126 @@
     "itemListOrder": "Ascending",
     "numberOfItems": 15,
     "itemListElement": [
-      { "@type": "ListItem", "position": 1, "name": "Text to PDF", "url": "https://www.alltoolai.com/text-to-pdf" },
-      { "@type": "ListItem", "position": 2, "name": "Images to PDF", "url": "https://www.alltoolai.com/images-to-pdf" },
-      { "@type": "ListItem", "position": 3, "name": "PDF to JPG", "url": "https://www.alltoolai.com/pdf-to-jpg" },
-      { "@type": "ListItem", "position": 4, "name": "PDF to PNG", "url": "https://www.alltoolai.com/pdf-to-png" },
-      { "@type": "ListItem", "position": 5, "name": "Merge PDF", "url": "https://www.alltoolai.com/merge-pdf" },
-      { "@type": "ListItem", "position": 6, "name": "Resize/Compress PDF", "url": "https://www.alltoolai.com/resize-pdf" },
-      { "@type": "ListItem", "position": 7, "name": "Rotate PDF Pages", "url": "https://www.alltoolai.com/rotate-pdf-pages" },
-      { "@type": "ListItem", "position": 8, "name": "Rearrange PDF Pages", "url": "https://www.alltoolai.com/rearrange-pdf-pages" },
-      { "@type": "ListItem", "position": 9, "name": "PDF Extractor", "url": "https://www.alltoolai.com/pdf-extractor" },
-      { "@type": "ListItem", "position": 10, "name": "PDF Split", "url": "https://www.alltoolai.com/pdf-split" },
-      { "@type": "ListItem", "position": 11, "name": "PDF Pages Delete", "url": "https://www.alltoolai.com/pdf-pages-delete" },
-      { "@type": "ListItem", "position": 12, "name": "Add PDF Page Numbers", "url": "https://www.alltoolai.com/add-pdf-page-numbers" },
-      { "@type": "ListItem", "position": 13, "name": "Watermark to PDF", "url": "https://www.alltoolai.com/watermark-pdf" },
-      { "@type": "ListItem", "position": 14, "name": "PDF Encrypt", "url": "https://www.alltoolai.com/pdf-encrypt" },
-      { "@type": "ListItem", "position": 15, "name": "PDF Decrypt", "url": "https://www.alltoolai.com/pdf-decrypt" }      
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Text to PDF",
+        "url": "https://www.alltoolai.com/text-to-pdf",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Images to PDF",
+        "url": "https://www.alltoolai.com/images-to-pdf",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "PDF to JPG",
+        "url": "https://www.alltoolai.com/pdf-to-jpg",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "name": "PDF to PNG",
+        "url": "https://www.alltoolai.com/pdf-to-png",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "name": "Merge PDF",
+        "url": "https://www.alltoolai.com/merge-pdf",
+        "applicationCategory": "Online Tool",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "name": "Resize PDF",
+        "url": "https://www.alltoolai.com/resize-pdf",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 7,
+        "name": "Rotate PDF Pages",
+        "url": "https://www.alltoolai.com/rotate-pdf-pages",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 8,
+        "name": "Rearrange PDF Pages",
+        "url": "https://www.alltoolai.com/rearrange-pdf-pages",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 9,
+        "name": "PDF Extractor",
+        "url": "https://www.alltoolai.com/pdf-extractor",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 10,
+        "name": "PDF Split",
+        "url": "https://www.alltoolai.com/pdf-split",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 11,
+        "name": "PDF Pages Delete",
+        "url": "https://www.alltoolai.com/pdf-pages-delete",
+        "applicationCategory": "UtilitiesApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 12,
+        "name": "Add PDF Page Numbers",
+        "url": "https://www.alltoolai.com/add-pdf-page-numbers",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 13,
+        "name": "Watermark to PDF",
+        "url": "https://www.alltoolai.com/watermark-pdf",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 14,
+        "name": "PDF Encrypt",
+        "url": "https://www.alltoolai.com/pdf-encrypt",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web"
+      },
+      {
+        "@type": "ListItem",
+        "position": 15,
+        "name": "PDF Decrypt",
+        "url": "https://www.alltoolai.com/pdf-decrypt",
+        "applicationCategory": "Security",
+        "operatingSystem": "Web"
+      }
     ]
   }
   </script>
