--- a/audio-cutter.html
+++ b/audio-cutter.html
@@ -50,23 +50,27 @@
     "name": "Free Online Audio Cutter",
     "url": "https://www.alltoolai.com/audio-cutter",
     "description": "Cut and trim audio files instantly in your browser. 100% private, fast, and free — supports MP3, WAV, OGG, and M4A formats with no uploads.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/audio-cutter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/audio-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "AllToolAI Audio Cutter",
     "operatingSystem": "Windows, macOS, Linux, iOS, Android",
     "applicationCategory": "MultimediaApplication",
     "description": "Free online tool to cut and trim audio files directly in your browser. 100% private — files never leave your device.",
     "url": "https://www.alltoolai.com/audio-cutter",
-    "image": "https://www.alltoolai.com/assets/audio-cutter-thumbnail.jpg",
     "featureList": [
       "Trim and cut audio directly in browser",
       "Supports MP3, WAV, OGG, M4A",
@@ -84,6 +88,10 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/audio-cutter"
     }
   }
   </script>
