--- a/audio-tools.html
+++ b/audio-tools.html
@@ -49,8 +49,15 @@
     "@type": "WebPage",
     "name": "Free Online Audio Tools",
     "url": "https://www.alltoolai.com/audio-tools",
+    "applicationCategory": "AudioApplication",
+    "operatingSystem": "Web",
     "description": "Convert video to MP3/WAV, convert MP3↔WAV, and cut audio in your browser. Free, fast, secure, and privacy-first online tools for creators and students.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/audio-tools"
+    },
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://www.alltoolai.com/"
@@ -68,7 +75,7 @@
     "inLanguage": "en",
     "isPartOf": {
       "@type": "WebSite",
-      "@id": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/"
     }
   }
   </script>
@@ -121,31 +128,41 @@
           "@type": "ListItem",
           "position": 1,
           "url": "https://www.alltoolai.com/video-to-mp3-converter",
-          "name": "Video to MP3 Converter"
+          "name": "Video to MP3 Converter",
+          "applicationCategory": "MultimediaApplication",
+          "operatingSystem": "Web"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "url": "https://www.alltoolai.com/video-to-wav-converter",
-          "name": "Video to WAV Converter"
+          "name": "Video to WAV Converter",
+          "applicationCategory": "MultimediaApplication",
+          "operatingSystem": "Web"
         },
         {
           "@type": "ListItem",
           "position": 3,
           "url": "https://www.alltoolai.com/mp3-to-wav-converter",
-          "name": "MP3 to WAV Converter"
+          "name": "MP3 to WAV Converter",
+          "applicationCategory": "MultimediaApplication",
+          "operatingSystem": "Web"
         },
         {
           "@type": "ListItem",
           "position": 4,
           "url": "https://www.alltoolai.com/wav-to-mp3-converter",
-          "name": "WAV to MP3 Converter"
+          "name": "WAV to MP3 Converter",
+          "applicationCategory": "MultimediaApplication",
+          "operatingSystem": "Web"
         },
         {
           "@type": "ListItem",
           "position": 5,
           "url": "https://www.alltoolai.com/audio-cutter",
-          "name": "Audio Cutter"
+          "name": "Audio Cutter",
+          "applicationCategory": "MultimediaApplication",
+          "operatingSystem": "Web"
         }
     ]
   }
