--- a/mp3-to-wav-converter.html
+++ b/mp3-to-wav-converter.html
@@ -54,16 +54,22 @@
     "name": "Free MP3 to WAV Converter",
     "url": "https://www.alltoolai.com/mp3-to-wav-converter",
     "description": "Convert MP3 to WAV for free in your browser. No uploads, 100% private, fast, and unlimited. Works offline after load.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/mp3-to-wav-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/audio-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "MP3 to WAV Converter",
     "operatingSystem": "Any (web-based)",
     "applicationCategory": "MultimediaApplication",
@@ -75,17 +81,21 @@
       "price": "0",
       "priceCurrency": "USD"
     },
-    "creator": {
-      "@type": "Organization",
-      "name": "All Tool AI",
-      "url": "https://www.alltoolai.com/"
-    },
     "featureList": [
       "No uploads – 100% private conversion",
       "Fast and unlimited",
       "Works offline after page load",
       "Free forever"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/mp3-to-wav-converter"
+    }
   }
   </script>
   <script type="application/ld+json">
