--- a/video-to-mp3-converter.html
+++ b/video-to-mp3-converter.html
@@ -51,16 +51,22 @@
     "url": "https://www.alltoolai.com/video-to-mp3-converter",
     "name": "Free Video to MP3 Converter (No Upload) | Fast, Private, High Quality",
     "description": "Convert any video to high-quality MP3 audio directly in your browser. 100% free, private, no uploads, and works on all devices.",
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/video-to-mp3-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/audio-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "Video to MP3 Converter",
     "operatingSystem": "Any (Web-based)",
     "applicationCategory": "MultimediaApplication",
@@ -80,8 +86,12 @@
     ],
     "publisher": {
       "@type": "Organization",
-      "name": "All Tool AI",
+      "name": "AllToolAI",
       "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/video-to-mp3-converter"
     }
   }
   </script>
