--- a/video-to-wav-converter.html
+++ b/video-to-wav-converter.html
@@ -51,13 +51,22 @@
     "name": "Free Video to WAV Converter (No Upload) Extract High Quality Audio",  
     "description": "Convert MP4, MOV, MKV, AVI, and WebM video files to high-quality WAV audio instantly in your browser. 100% private, free, and fast.",  
     "url": "https://www.alltoolai.com/video-to-wav-converter",  
-    "inLanguage": "en"  
+    "isAccessibleForFree": true,
+    "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/video-to-wav-converter"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/audio-tools"
+    }
   }  
   </script>
   <script type="application/ld+json">  
   {  
     "@context": "https://schema.org",  
-    "@type": "SoftwareApplication",  
+    "@type": "Software",  
     "name": "Video to WAV Converter",  
     "operatingSystem": "Web",  
     "applicationCategory": "MultimediaApplication",  
@@ -68,18 +77,22 @@
       "priceCurrency": "USD"  
     },  
     "url": "https://www.alltoolai.com/video-to-wav-converter",  
-    "publisher": {  
-      "@type": "Organization",  
-      "name": "All Tool AI",  
-      "url": "https://www.alltoolai.com"  
-    },  
     "featureList": [  
       "No file upload – local browser processing",  
       "Supports MP4, MOV, MKV, AVI, WebM",  
       "Outputs WAV (PCM 16-bit)",  
       "Free and unlimited use",  
       "Cross-platform: Chrome, Edge, Firefox, Safari"  
-    ]  
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/video-to-wav-converter"
+    } 
   }  
   </script>
   <script type="application/ld+json">
