--- a/wav-to-mp3-converter.html
+++ b/wav-to-mp3-converter.html
@@ -52,17 +52,22 @@
     "name": "Free Online WAV to MP3 Converter",
     "headline": "WAV to MP3 Converter – Free, Fast, Private (No Uploads)",
     "description": "Convert uncompressed WAV files to universal MP3 in seconds. 100% private, runs locally in your browser with no uploads. Free forever and works on all platforms.",
+    "isAccessibleForFree": true,
     "inLanguage": "en",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/wav-to-mp3-converter"
+    },
     "isPartOf": {
       "@type": "WebSite",
-      "url": "https://www.alltoolai.com/"
+      "url": "https://www.alltoolai.com/audio-tools"
     }
   }
   </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
+    "@type": "Software",
     "name": "WAV to MP3 Converter",
     "operatingSystem": "Windows, macOS, Linux, iOS, Android, ChromeOS",
     "applicationCategory": "MultimediaApplication",
@@ -78,7 +83,16 @@
       "Free forever – no signup, no limits, no watermark",
       "Fast conversion – WAV to MP3 in seconds",
       "Universal compatibility – works across all major platforms"
-    ]
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://www.alltoolai.com/wav-to-mp3-converter"
+    }
   }
   </script>
   <script type="application/ld+json">
