--- a/audio-tools.html
+++ b/audio-tools.html
@@ -6,7 +6,7 @@
   <meta name="author" content="All Tool AI" />
   <link rel="canonical" href="https://www.alltoolai.com/audio-tools" />
 
-  <title>Free Online Audio Tools Video to MP3/WAV, MP3 to WAV, WAV to MP3, Audio Cutter | All Tool AI</title>
+  <title>Free Online Audio Tools Video to MP3/WAV, MP3 to WAV, WAV to MP3, Audio Cutter</title>
   <meta name="description" content="Top, fast, best, and lifetime free audio tools. Convert video to MP3/WAV, MP3↔WAV, and cut audio online. Unlimited, no sign up, 100% confidential and secure. Works worldwide." />
   <meta name="keywords" content="video to mp3 converter, video to wav converter, mp3 to wav, wav to mp3, audio cutter, extract audio from video, online audio converter, fast, secure, unlimited, no signup, privacy-first, works worldwide">
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
