--- a/video-to-mp3-converter.html
+++ b/video-to-mp3-converter.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://www.alltoolai.com/video-to-mp3-converter"/>
 
     <!-- SEO: Video to MP3 Converter -->
-  <title>Free Video to MP3 Converter (No Upload) | Fast, Private, High Quality | All Tool AI</title>
+  <title>Free Video to MP3 Converter (No Upload) | Fast, Private, High Quality</title>
   <meta name="description" content="Convert video to MP3 instantly in your browser. Fast, private, and free forever your files never leave your device. Supports MP4, MOV, MKV, WEBM, AVI. Export high quality MP3."/>
   <meta name="keywords" content="video to mp3, convert video to audio, mp3 extractor, video mp3 converter, online video to mp3, free video to mp3 converter, no upload video to mp3, fast video to mp3, secure video to mp3, private converter, all tool ai, mp4 to mp3, mov to mp3, mkv to mp3, webm to mp3"/>
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
