--- a/video-to-wav-converter.html
+++ b/video-to-wav-converter.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://www.alltoolai.com/video-to-wav-converter" />
 
   <!-- SEO & Sharing -->
-  <title>Free Video to WAV Converter (No Upload) Extract High Quality Audio | All Tool AI</title>
+  <title>Free Video to WAV Converter (No Upload) Extract High Quality Audio</title>
   <meta name="description" content="Convert any video to WAV online in your browser. Free, unlimited, and private files never leave your device. Supports MP4, MOV, MKV, AVI, WebM." />
   <meta name="keywords" content="video to wav, mp4 to wav, mov to wav, mkv to wav, avi to wav, webm to wav, extract audio, video audio extractor, wav converter online, free converter, secure, private, no upload, in-browser, All Tool AI" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
