--- a/image-crop.html
+++ b/image-crop.html
@@ -6,7 +6,7 @@
   <meta name="author" content="All Tool AI" />
   <link rel="canonical" href="https://www.alltoolai.com/image-crop" />
 
-  <title>Free Online Image Cropper | Crop, Resize & Export (PNG/JPG/WEBP) All Tool AI</title>
+  <title>Free Online Image Cropper | Crop & Export (PNG/JPG/WEBP) All Tool AI</title>
   <meta name="description" content="Crop images online instantly free, unlimited, and privacy first. Files never leave your device. Presets: 1:1, 4:5, 16:9, 9:16, passport/ID, print sizes. Export to PNG, JPG, or WEBP. Fast, secure, no signup." />
   <meta name="keywords" content="image cropper, crop image online, free photo crop tool, crop JPG, crop PNG, crop WEBP, 1:1, 4:5, 16:9, 9:16, passport photo crop, visa photo crop, ID photo crop, print sizes 4x6 5x7, social media crop, Instagram crop, YouTube thumbnail crop, India, USA, UK, Canada, Australia, EU" />
   <meta name="robots" content="index, follow, max-snippet, max-image-preview" />
