--- a/rearrange-pdf-pages.html
+++ b/rearrange-pdf-pages.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://www.alltoolai.com/rearrange-pdf-pages" />
 
   <!-- SEO Title + Description -->
-  <title>Rearrange PDF Pages Reorder, Rotate, Delete (Offline, Private, Free) | AllToolAI</title>
+  <title>Rearrange PDF Pages Reorder, Rotate, Delete (Private, Free)| AllToolAI</title>
   <meta name="description" content="Rearrange, rotate, delete or reorder PDF pages 100% offline in your browser. Free forever, unlimited, no watermarks. Fast and secure files never leave your device.">
   <meta name="keywords" content="rearrange PDF pages, reorder PDF pages, rotate PDF pages, delete PDF pages, reorder pages in PDF, PDF page editor, PDF page organizer, offline PDF editor, browser-based PDF tool, free PDF tool, secure, no watermark, AllToolAI">
   <meta name="robots" content="index, follow, max-snippet, max-image-preview">
