--- a/mp3-to-wav-converter.html
+++ b/mp3-to-wav-converter.html
@@ -90,7 +90,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
