--- a/pdf-pages-delete.html
+++ b/pdf-pages-delete.html
@@ -99,7 +99,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
