--- a/rearrange-pdf-pages.html
+++ b/rearrange-pdf-pages.html
@@ -90,7 +90,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
