--- a/resize-pdf.html
+++ b/resize-pdf.html
@@ -82,7 +82,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
