--- a/watermark-pdf.html
+++ b/watermark-pdf.html
@@ -86,7 +86,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "AllToolAI",
-      "url": "https://www.alltoolai.com"
+      "url": "https://www.alltoolai.com/"
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
